task_3/separated_manifests/service_clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: ingress-test-1
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: ingress-test-1
  type: ClusterIP
